--- a/styles/2020/mobile.css
+++ b/styles/2020/mobile.css
@@ -22,6 +22,7 @@
     font-size: 1.57em;
     letter-spacing: 1.2px;
     top: 86px;
+    left: 3px;
   }
   .register-button {
     height: 40px;
@@ -33,12 +34,12 @@
     font-size: 1.26em;
     letter-spacing: 1px;
     left: 20px;
-    top: 8px;
+    top: 9px;
   }
   .header-text-container #date {
     position: absolute;
     top: -15.84px;
-    left: 3.6px;
+    left: 2.2px;
     font-size: 1.62em;
     letter-spacing: 1.2px;
   }
@@ -100,7 +101,7 @@
   .header-text-container #date {
     position: absolute;
     top: -6px;
-    left: 3px;
+    left: 1px;
     font-size: .79em;
     letter-spacing: 1px;
   }
